--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,7 +1,31 @@
-header .logo {
-  width: 125px; }
-  header .logo img {
-    width: 100%; }
+header {
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid #d5d5d5; }
+  header nav, header .logo {
+    display: inline-block; }
+  header .logo {
+    height: 100%;
+    width: 110px; }
+    header .logo img {
+      position: relative;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%; }
+  header nav {
+    float: left;
+    height: 100%;
+    width: 2%;
+    margin-left: 20px;
+    margin-right: 20px; }
+    header nav #hamburger {
+      position: relative;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+      header nav #hamburger #hamburgerImage {
+        font-size: 25px; }
 
 * {
   scroll-behavior: smooth;
