--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -1,9 +1,38 @@
 header {
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid $main-border-color;
+
+    nav, .logo {
+        display: inline-block;
+    }
     .logo {
-        width: 125px;
+        height: 100%;
+        width: 110px;
         
         img {
+            position: relative;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
             width: 100%;
+        }
+    }
+    nav {
+        float: left;
+        height: 100%;
+        width: 2%;
+        margin-left: 20px;
+        margin-right: 20px;
+
+        #hamburger {
+            position: relative;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            #hamburgerImage {
+                font-size: 25px;
+            }
         }
     }
 }
