--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  height: 50px;
+  height: 60px;
   border-bottom: 1px solid #d5d5d5; }
   header nav, header .logo {
     display: inline-block; }
@@ -16,16 +16,33 @@ header {
   header nav {
     float: left;
     height: 100%;
-    width: 2%;
     margin-left: 20px;
     margin-right: 20px; }
     header nav #hamburger {
       position: relative;
       left: 50%;
       top: 50%;
-      transform: translate(-50%, -50%); }
+      transform: translate(-50%, -50%);
+      padding: 10px;
+      border-radius: 50%;
+      background-color: white;
+      border: 2px solid white; }
+      header nav #hamburger a {
+        cursor: pointer; }
       header nav #hamburger #hamburgerImage {
         font-size: 25px; }
+      header nav #hamburger.hamburger-click {
+        animation-name: hamburgerClicked;
+        animation-duration: 1s; }
+
+@keyframes hamburgerClicked {
+  0% {
+    background-color: #d5d5d5; }
+  20% {
+    border: 2px solid #b7b7b7; }
+  100% {
+    border: 2px solid white;
+    background-color: white; } }
 
 * {
   scroll-behavior: smooth;
