--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 50px;
+    height: 60px;
     border-bottom: 1px solid $main-border-color;
 
     nav, .logo {
@@ -21,18 +21,34 @@ header {
     nav {
         float: left;
         height: 100%;
-        width: 2%;
         margin-left: 20px;
         margin-right: 20px;
 
         #hamburger {
             position: relative;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            padding: 10px;
+            border-radius: 50%;
+            background-color: white;
+            border: 2px solid white;
+            
+            a {
+                cursor: pointer;
+            }
             #hamburgerImage {
                 font-size: 25px;
             }
+            &.hamburger-click {
+                animation-name: hamburgerClicked;
+                animation-duration: 1s;
+            }
         }
     }
+}
+@keyframes hamburgerClicked {
+    0% { background-color: $main-border-color; }
+    20% { border: 2px solid $darker-main-border-color; }
+    100% { border: 2px solid white; background-color: white; }
 }
