--- a/styles/sass/base/_base.scss
+++ b/styles/sass/base/_base.scss
@@ -3,7 +3,8 @@
 
 * {
     scroll-behavior: smooth;
-    // font-family: ;
+    color: $main-font-color;
+    font-family: $main-font-family;
     margin: 0;
     padding: 0;
 }
