--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,7 +1,17 @@
+@font-face {
+  font-family: roboto;
+  src: url(../../font/Roboto/Roboto-Regular.ttf); }
+
 header {
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #d5d5d5; }
+  position: fixed; }
+  header .bottom-border {
+    top: 60px;
+    left: 255px;
+    position: absolute;
+    width: 100%;
+    border-bottom: 1px solid #d5d5d5; }
   header nav, header .logo {
     display: inline-block; }
   header .logo {
@@ -15,9 +25,70 @@ header {
       width: 100%; }
   header nav {
     float: left;
+    max-width: 45.88px;
     height: 100%;
-    margin-left: 20px;
-    margin-right: 20px; }
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 14px; }
+    header nav #navLinks {
+      margin-top: 20px;
+      position: absolute;
+      left: 0;
+      width: 240px; }
+      header nav #navLinks hr {
+        border: 1px solid #d5d5d5; }
+      header nav #navLinks p {
+        padding-top: 20px;
+        margin-left: 30px;
+        margin-right: 30px; }
+      header nav #navLinks .title {
+        color: #797979;
+        font-weight: bold;
+        padding-bottom: 15px; }
+      header nav #navLinks .item {
+        padding-left: 30px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        display: block;
+        cursor: pointer;
+        position: relative; }
+        header nav #navLinks .item:hover {
+          background-color: #d5d5d5; }
+        header nav #navLinks .item p {
+          padding-top: 0;
+          margin-right: 0;
+          margin-left: 25px;
+          display: inline-block;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%); }
+        header nav #navLinks .item .icon {
+          position: relative;
+          display: inline-block;
+          font-size: 20px; }
+          header nav #navLinks .item .icon i {
+            width: 23px;
+            max-width: 23px; }
+        header nav #navLinks .item.active {
+          background-color: #d5d5d5; }
+          header nav #navLinks .item.active p {
+            font-weight: bold; }
+      header nav #navLinks .categories .item .icon {
+        position: relative;
+        display: inline-block;
+        background-color: #373737;
+        width: 23px;
+        height: 23px;
+        border-radius: 50%;
+        font-size: 11px; }
+        header nav #navLinks .categories .item .icon i {
+          width: fit-content;
+          max-width: fit-content;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          color: white; }
     header nav #hamburger {
       position: relative;
       left: 50%;
@@ -46,5 +117,7 @@ header {
 
 * {
   scroll-behavior: smooth;
+  color: #030303;
+  font-family: roboto;
   margin: 0;
   padding: 0; }
