--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -1,8 +1,15 @@
 header {
     width: 100%;
     height: 60px;
-    border-bottom: 1px solid $main-border-color;
+    position: fixed;
 
+    .bottom-border {
+        top: 60px;
+        left: 255px;
+        position: absolute;
+        width: 100%;
+        border-bottom: 1px solid $main-border-color;
+    }
     nav, .logo {
         display: inline-block;
     }
@@ -20,10 +27,93 @@ header {
     }
     nav {
         float: left;
+        max-width: 45.88px;
         height: 100%;
-        margin-left: 20px;
-        margin-right: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 14px;
 
+        #navLinks {
+            margin-top: 20px;
+            position: absolute;
+            left: 0;
+            width: 240px;
+
+            hr {
+                border: 1px solid $main-border-color;
+            }
+            p {
+                padding-top: 20px;
+                margin-left: 30px;
+                margin-right: 30px;
+            }
+            .title {
+                color: $secondary-font-color;
+                font-weight: bold;
+                padding-bottom: 15px;
+            }
+            .item {
+                padding-left: 30px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                display: block;
+                cursor: pointer;
+                position: relative;
+
+                &:hover {
+                    background-color: $main-border-color;
+                }
+                p {
+                    padding-top: 0;
+                    margin-right: 0;
+                    margin-left: 25px;
+                    display: inline-block;
+                    position: absolute;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+                .icon {
+                    position: relative;
+                    display: inline-block;
+                    font-size: 20px;
+                    
+                    i {
+                        width: 23px;
+                        max-width: 23px;
+                    }
+                }
+                &.active {
+                    background-color: $main-border-color;
+
+                    p {
+                        font-weight: bold;
+                    }
+                }
+            }
+            .categories {
+                .item {
+                    .icon {
+                        position: relative;
+                        display: inline-block;
+                        background-color: #373737;
+                        width: 23px;
+                        height: 23px;
+                        border-radius: 50%;
+                        font-size: 11px;
+
+                        i {
+                            width: fit-content;
+                            max-width: fit-content;
+                            position: absolute;
+                            left: 50%;
+                            top: 50%;
+                            transform: translate(-50%, -50%);
+                            color: white;
+                        }
+                    }
+                }
+            }
+        }
         #hamburger {
             position: relative;
             left: 50%;
