--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -16,3 +16,7 @@ $secondary-font-color: #797979;
 
 $main-border-color: #d5d5d5;
 $darker-main-border-color: #b7b7b7;
+
+// SIGN IN BUTTON
+
+$sign-main-color: #065fd4;
