--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -89,6 +89,33 @@ header {
           top: 50%;
           transform: translate(-50%, -50%);
           color: white; }
+      header nav #navLinks .sign-btn {
+        position: relative;
+        display: block;
+        margin-left: 35px;
+        margin-right: 30px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        border: 1px solid #065fd4;
+        width: 125px;
+        height: 35px; }
+        header nav #navLinks .sign-btn p, header nav #navLinks .sign-btn i {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%); }
+        header nav #navLinks .sign-btn p {
+          width: fit-content;
+          left: 60%;
+          padding: 0;
+          margin: 0;
+          font-weight: bold;
+          color: #065fd4;
+          display: inline-block; }
+        header nav #navLinks .sign-btn i {
+          left: 20%;
+          font-size: 20px;
+          color: #065fd4; }
     header nav #hamburger {
       position: relative;
       left: 50%;
