--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -113,6 +113,38 @@ header {
                     }
                 }
             }
+            .sign-btn {
+                position: relative;
+                display: block;
+                margin-left: 35px;
+                margin-right: 30px;
+                margin-top: 15px;
+                margin-bottom: 15px;
+                border: 1px solid $sign-main-color;
+                width: 125px;
+                height: 35px;
+
+                p, i {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+                p {
+                    width: fit-content;
+                    left: 60%;
+                    padding: 0;
+                    margin: 0;
+                    font-weight: bold;
+                    color: $sign-main-color;
+                    display: inline-block;
+                }
+                i {
+                    left: 20%;
+                    font-size: 20px;
+                    color: $sign-main-color;
+                }
+            }
         }
         #hamburger {
             position: relative;
