--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -31,10 +31,13 @@ header {
     padding-right: 20px;
     font-size: 14px; }
     header nav #navLinks {
+      height: 890px;
       margin-top: 20px;
+      padding-bottom: 50px;
       position: absolute;
       left: 0;
-      width: 240px; }
+      width: 240px;
+      overflow-y: scroll; }
       header nav #navLinks hr {
         border: 1px solid #d5d5d5; }
       header nav #navLinks p {
@@ -73,20 +76,23 @@ header {
           background-color: #d5d5d5; }
           header nav #navLinks .item.active p {
             font-weight: bold; }
-        header nav #navLinks .item.browse .icon {
-          border: 1px solid black;
-          width: 18px;
-          margin-left: 2px;
-          height: 18px;
-          border-radius: 50%;
-          font-size: 0.7rem; }
-          header nav #navLinks .item.browse .icon i {
-            width: fit-content;
-            max-width: fit-content;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%); }
+        header nav #navLinks .item.browse {
+          margin-top: 10px;
+          margin-bottom: 10px; }
+          header nav #navLinks .item.browse .icon {
+            border: 1px solid black;
+            width: 18px;
+            margin-left: 2px;
+            height: 18px;
+            border-radius: 50%;
+            font-size: 0.7rem; }
+            header nav #navLinks .item.browse .icon i {
+              width: fit-content;
+              max-width: fit-content;
+              position: absolute;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%); }
       header nav #navLinks .categories .item .icon {
         position: relative;
         display: inline-block;
