--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -34,10 +34,13 @@ header {
         font-size: 14px;
 
         #navLinks {
+            height: 890px;
             margin-top: 20px;
+            padding-bottom: 50px;
             position: absolute;
             left: 0;
             width: 240px;
+            overflow-y: scroll;
 
             hr {
                 border: 1px solid $main-border-color;
@@ -90,6 +93,9 @@ header {
                     }
                 }
                 &.browse {
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+
                     .icon {
                         border: 1px solid black;
                         width: 18px;
