--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -153,7 +153,7 @@ header {
         animation-duration: 1s; }
   header .search-bar {
     position: relative;
-    width: 40%;
+    width: 35%;
     margin-left: 22.5%; }
     header .search-bar form {
       height: 40px;
@@ -165,14 +165,30 @@ header {
       transform: translate(-50%, -50%); }
       header .search-bar form input {
         height: 35px;
-        border: 1px solid #d5d5d5; }
+        border: 1px solid #d5d5d5;
+        box-sizing: border-box; }
       header .search-bar form input[type=text] {
         font-size: 16px;
         padding-left: 10px;
-        width: 75%; }
+        width: 80%; }
       header .search-bar form input[type=submit] {
         height: 37px;
-        width: 65px; }
+        width: 65px;
+        border-left: none;
+        cursor: pointer; }
+  header .voice-search {
+    position: relative;
+    cursor: pointer; }
+    header .voice-search i {
+      padding: 10px;
+      padding-left: 12px;
+      padding-right: 12px;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.1rem; }
 
 @keyframes hamburgerClicked {
   0% {
