--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -194,7 +194,7 @@ header {
     }
     .search-bar {
         position: relative;
-        width: 40%;
+        width: 35%;
         margin-left: 22.5%;
 
         form {
@@ -209,16 +209,35 @@ header {
             input {
                 height: 35px;
                 border: 1px solid $main-border-color;
+                box-sizing: border-box;
             }
             input[type=text] {
                 font-size: 16px;
                 padding-left: 10px;
-                width: 75%;
+                width: 80%;
             }
             input[type=submit] {
                 height: 37px;
                 width: 65px;
+                border-left: none;
+                cursor: pointer;
             }
+        }
+    }
+    .voice-search {
+        position: relative;
+        cursor: pointer;
+
+        i {
+            padding: 10px;
+            padding-left: 12px;
+            padding-right: 12px;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 1.1rem;
         }
     }
 }
