--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -138,35 +138,13 @@ header {
                 }
             }
             .sign-btn {
-                position: relative;
-                display: block;
+                float: none;
                 margin-left: 35px;
-                margin-right: 30px;
                 margin-top: 15px;
-                margin-bottom: 15px;
-                border: 1px solid $sign-main-color;
-                width: 125px;
-                height: 35px;
 
-                p, i {
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
                 p {
-                    width: fit-content;
-                    left: 60%;
                     padding: 0;
                     margin: 0;
-                    font-weight: bold;
-                    color: $sign-main-color;
-                    display: inline-block;
-                }
-                i {
-                    left: 20%;
-                    font-size: 20px;
-                    color: $sign-main-color;
                 }
             }
         }
@@ -224,7 +202,7 @@ header {
             }
         }
     }
-    .voice-search {
+    .voice-search, .apps, .anym-settings {
         position: relative;
         cursor: pointer;
 
@@ -238,6 +216,49 @@ header {
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 1.1rem;
+        }
+    }
+    .apps, .anym-settings {
+        float: right;
+        margin-right: 40px;
+
+        i {
+            font-size: 1.3rem;
+        }
+    }
+    .anym-settings {
+        margin-right: 30px;
+    }
+    .sign-btn {
+        float: right;
+        position: relative;
+        display: block;
+        margin-right: 10px;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        border: 1px solid $sign-main-color;
+        width: 125px;
+        height: 35px;
+
+        p, i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        p {
+            width: fit-content;
+            left: 60%;
+            padding: 0;
+            margin: 0;
+            font-weight: bold;
+            color: $sign-main-color;
+            display: inline-block;
+        }
+        i {
+            left: 20%;
+            font-size: 20px;
+            color: $sign-main-color;
         }
     }
 }
