started to make the categories

--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -16,6 +16,7 @@ $secondary-font-color: #797979;
 
 $main-border-color: #d5d5d5;
 $darker-main-border-color: #b7b7b7;
+$lighter-main-border-color: #e6e6e6;
 
 // SIGN IN BUTTON
 
