--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -37,8 +37,6 @@ header {
       left: 0;
       width: 240px;
       overflow-y: scroll; }
-      header nav #navLinks hr {
-        border: 1px solid #d5d5d5; }
       header nav #navLinks p {
         padding-top: 20px;
         margin-left: 30px;
@@ -224,9 +222,32 @@ footer {
     text-align: center;
     color: white; }
 
+.video-categories {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d5d5d5; }
+  .video-categories .category {
+    display: inline-block;
+    background-color: #e6e6e6;
+    border: 1px solid #d5d5d5;
+    border-radius: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 10px; }
+    .video-categories .category:hover {
+      cursor: pointer; }
+
+section {
+  margin-left: 255px;
+  padding-top: 70px; }
+
 * {
   scroll-behavior: smooth;
   color: #030303;
   font-family: roboto;
   margin: 0;
   padding: 0; }
+
+hr {
+  border: 1px solid #d5d5d5; }
