--- a/styles/sass/layout/_videos.scss
+++ b/styles/sass/layout/_videos.scss
@@ -7,11 +7,11 @@
         width: 20%;
         margin-left: 2.5%;
         margin-right: 2.5%;
-        height: 300px;
+        min-height: 300px;
 
         .thumbnail {
             position: relative;
-            height: 70%;
+            height: 40%;
             width: 100%;
 
             .time {
