--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -29,32 +29,38 @@ header {
     padding-left: 20px;
     padding-right: 20px;
     font-size: 14px; }
-    header nav #navLinks {
+    header nav .navLinks, header nav .closed-navLinks {
       height: 890px;
       margin-top: 20px;
       padding-bottom: 50px;
       position: absolute;
       left: 0;
-      width: 240px;
       overflow-y: scroll; }
-      header nav #navLinks p {
-        padding-top: 20px;
-        margin-left: 30px;
-        margin-right: 30px; }
-      header nav #navLinks .title {
-        color: #606060;
-        font-weight: bold;
-        padding-bottom: 15px; }
-      header nav #navLinks .item {
-        padding-left: 30px;
-        padding-top: 10px;
-        padding-bottom: 10px;
+      header nav .navLinks .item, header nav .closed-navLinks .item {
         display: block;
         cursor: pointer;
         position: relative; }
-        header nav #navLinks .item:hover {
+        header nav .navLinks .item:hover, header nav .closed-navLinks .item:hover {
           background-color: #d5d5d5; }
-        header nav #navLinks .item p {
+        header nav .navLinks .item.active p, header nav .closed-navLinks .item.active p {
+          font-weight: bold; }
+    header nav .navLinks {
+      width: 240px; }
+      header nav .navLinks p {
+        padding-top: 20px;
+        margin-left: 30px;
+        margin-right: 30px; }
+      header nav .navLinks .title {
+        color: #606060;
+        font-weight: bold;
+        padding-bottom: 15px; }
+      header nav .navLinks .item {
+        padding-left: 30px;
+        padding-top: 10px;
+        padding-bottom: 10px; }
+        header nav .navLinks .item:hover {
+          background-color: #d5d5d5; }
+        header nav .navLinks .item p {
           padding-top: 0;
           margin-right: 0;
           margin-left: 25px;
@@ -62,35 +68,33 @@ header {
           position: absolute;
           top: 50%;
           transform: translateY(-50%); }
-        header nav #navLinks .item .icon {
+        header nav .navLinks .item .icon {
           position: relative;
           display: inline-block;
           font-size: 20px; }
-          header nav #navLinks .item .icon i {
+          header nav .navLinks .item .icon i {
             width: 23px;
             max-width: 23px; }
-        header nav #navLinks .item.active {
+        header nav .navLinks .item.active {
           background-color: #d5d5d5; }
-          header nav #navLinks .item.active p {
-            font-weight: bold; }
-        header nav #navLinks .item.browse {
+        header nav .navLinks .item.browse {
           margin-top: 10px;
           margin-bottom: 10px; }
-          header nav #navLinks .item.browse .icon {
+          header nav .navLinks .item.browse .icon {
             border: 1px solid black;
             width: 18px;
             margin-left: 2px;
             height: 18px;
             border-radius: 50%;
             font-size: 0.7rem; }
-            header nav #navLinks .item.browse .icon i {
+            header nav .navLinks .item.browse .icon i {
               width: fit-content;
               max-width: fit-content;
               position: absolute;
               left: 50%;
               top: 50%;
               transform: translate(-50%, -50%); }
-      header nav #navLinks .categories .item .icon {
+      header nav .navLinks .categories .item .icon {
         position: relative;
         display: inline-block;
         background-color: #373737;
@@ -98,7 +102,7 @@ header {
         height: 23px;
         border-radius: 50%;
         font-size: 0.7rem; }
-        header nav #navLinks .categories .item .icon i {
+        header nav .navLinks .categories .item .icon i {
           width: fit-content;
           max-width: fit-content;
           position: absolute;
@@ -106,13 +110,28 @@ header {
           top: 50%;
           transform: translate(-50%, -50%);
           color: white; }
-      header nav #navLinks .sign-btn {
+      header nav .navLinks .sign-btn {
         float: none;
         margin-left: 35px;
         margin-top: 15px; }
-        header nav #navLinks .sign-btn p {
+        header nav .navLinks .sign-btn p {
           padding: 0;
           margin: 0; }
+    header nav .closed-navLinks {
+      width: 100px; }
+      header nav .closed-navLinks .item {
+        width: 100%;
+        height: 85px; }
+        header nav .closed-navLinks .item .icon, header nav .closed-navLinks .item p {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%); }
+        header nav .closed-navLinks .item .icon {
+          font-size: 20px; }
+        header nav .closed-navLinks .item p {
+          top: 75%;
+          font-size: 10px; }
     header nav #hamburger {
       position: relative;
       left: 50%;
