--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -32,14 +32,32 @@ header {
         padding-right: 20px;
         font-size: 14px;
 
-        #navLinks {
+        .navLinks, .closed-navLinks {
             height: 890px;
             margin-top: 20px;
             padding-bottom: 50px;
             position: absolute;
             left: 0;
-            width: 240px;
             overflow-y: scroll;
+
+            .item {
+                display: block;
+                cursor: pointer;
+                position: relative;
+
+                &:hover {
+                    background-color: $main-border-color;
+                }
+                &.active {
+
+                    p {
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+        .navLinks {
+            width: 240px;
             
             p {
                 padding-top: 20px;
@@ -55,9 +73,6 @@ header {
                 padding-left: 30px;
                 padding-top: 10px;
                 padding-bottom: 10px;
-                display: block;
-                cursor: pointer;
-                position: relative;
 
                 &:hover {
                     background-color: $main-border-color;
@@ -83,10 +98,6 @@ header {
                 }
                 &.active {
                     background-color: $main-border-color;
-
-                    p {
-                        font-weight: bold;
-                    }
                 }
                 &.browse {
                     margin-top: 10px;
@@ -142,6 +153,28 @@ header {
                 p {
                     padding: 0;
                     margin: 0;
+                }
+            }
+        }
+        .closed-navLinks {
+            width: 100px;
+
+            .item {
+                width: 100%;
+                height: 85px;
+                
+                .icon, p {
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                }
+                .icon {
+                    font-size: 20px;
+                }
+                p {
+                    top: 75%;
+                    font-size: 10px;
                 }
             }
         }
