--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -178,11 +178,11 @@ header {
         width: 65px;
         border-left: none;
         cursor: pointer; }
-  header .voice-search, header .apps, header .anym-settings {
+  header .voice-search, header .apps, header .anym-settings, header .search-btn {
     width: 60px;
     position: relative;
     cursor: pointer; }
-    header .voice-search i, header .apps i, header .anym-settings i {
+    header .voice-search i, header .apps i, header .anym-settings i, header .search-btn i {
       padding: 10px;
       padding-left: 12px;
       padding-right: 12px;
@@ -244,12 +244,16 @@ header {
     margin-left: 5%; }
     header .search-bar form input[type=text] {
       width: 70%; }
-  header .voice-search, header .apps, header .anym-settings {
+  header .voice-search, header .apps, header .anym-settings, header .search-btn {
     width: 40px; } }
 
 @media (max-width: 800px) {
   header .search-bar {
     margin-left: 2.5%; } }
+
+@media (max-width: 750px) {
+  header .search-btn, header .voice-search {
+    float: right; } }
 
 footer {
   position: fixed;
