--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -253,7 +253,12 @@ header {
 
 @media (max-width: 750px) {
   header .search-btn, header .voice-search {
-    float: right; } }
+    float: right; }
+  header .search-container {
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    background-color: white; } }
 
 footer {
   position: fixed;
