--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -341,5 +341,11 @@ header {
         .search-btn, .voice-search {
             float: right;
         }
+        .search-container {
+            position: fixed;
+            width: 100%;
+            height: 60px;
+            background-color: white;
+        }
     }
 }
