--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -351,6 +351,9 @@ header {
         .search-bar {
             margin-left: 2.5%;
         }
+        .closed-navLinks {
+            display: none;
+        }
     }
 }
 @media (max-width: 750px) {
