--- a/styles/sass/layout/_content.scss
+++ b/styles/sass/layout/_content.scss
@@ -20,3 +20,8 @@ section {
         margin-left: 100px;
     }   
 }
+@media (max-width: 800px) {
+    section, .expanded-view {
+        margin-left: 10px;
+    }
+}
