--- a/styles/sass/base/_base.scss
+++ b/styles/sass/base/_base.scss
@@ -9,6 +9,9 @@
     padding: 0;
     scrollbar-width: thin;
 }
+body {
+    background-color: white;
+}
 hr {
     border: 1px solid $main-border-color;
 }
