--- a/styles/sass/layout/_content.scss
+++ b/styles/sass/layout/_content.scss
@@ -8,7 +8,7 @@
     opacity: 0.5;
     z-index: 98;
 }
-section {
+.video-section {
     margin-left: 255px;
     padding-top: 70px;
 }
@@ -16,12 +16,12 @@ section {
     margin-left: 100px;
 }
 @media (max-width: 1300px) {
-    section {
+    .video-section {
         margin-left: 100px;
     }   
 }
 @media (max-width: 800px) {
-    section, .expanded-view {
+    .video-section, .expanded-view {
         margin-left: 10px;
     }
 }
