--- a/styles/sass/layout/_sign.scss
+++ b/styles/sass/layout/_sign.scss
@@ -12,5 +12,21 @@
         height: 500px;
         border: 2px solid $lighter-main-border-color;
         border-radius: 10px;
+        text-align: center;
+
+        h2 {
+            font-weight: 100;
+            font-size: 24px;
+        }
+        .logo {
+            margin-top: 50px;
+            margin-bottom: 10px;
+            width: 100%;
+            text-align: center;
+            
+            img {
+                width: 75px;
+            }
+        }
     }
 }
