--- a/styles/sass/layout/_content.scss
+++ b/styles/sass/layout/_content.scss
@@ -8,6 +8,11 @@
     opacity: 0.5;
     z-index: 98;
 }
+.home-page {
+    &>* {
+        font-family: $main-font-family;
+    }
+}
 .video-section {
     margin-left: 255px;
     padding-top: 70px;
