--- a/styles/sass/layout/_sign.scss
+++ b/styles/sass/layout/_sign.scss
@@ -17,6 +17,22 @@
         border-radius: 10px;
         text-align: center;
 
+        form {
+            margin-top: 20px;
+            margin-left: 10%;
+            margin-right: 10%;
+            width: 80%;
+
+            input[type=email] {
+                width: 100%;
+                font-size: 16px;
+                padding: 13px 15px;
+            }
+        }
+        p {
+            margin-top: 10px;
+            font-size: 16px;
+        }
         h2 {
             font-weight: 100;
             font-size: 24px;
